Added account and payment method endpoints
